api for initialize-clip, set_metadata and set_audio_description
